Revert "* Prevent the slideshow in the header from jumping after it is loaded."
This reverts commit a6af9267b4ce456feb5ab2d01b8806054c3ef608.

--- a/css/onato.css
+++ b/css/onato.css
@@ -4,10 +4,6 @@
 {% include css/style.css %}
 {% include css/syntax.css %}
 
-#header .slideshow{
-  min-height: 607px;
-}
-
 #logo {
   float:inherit;
   width:200px;
